# Multi-Agent-Corp-Oper-Platform

./: .env.example  .gitignore  READEME.md  README.md  WALKTHRU.md  docker-compose.yml  pyproject.toml
docker/: api_gateway.Dockerfile  orchestrator.Dockerfile
infra/scripts/: deploy-api-gateway.sh  deploy-orchestrator.sh  e2e-smoke-test.sh
services/api_gateway/: config.py  main.py
services/api_gateway/api/: app.py  dependencies.py  schemas.py
services/api_gateway/clients/: orchestrator_client.py
services/orchestrator/: config.py  main.py
services/orchestrator/agents/: analyst.py
services/orchestrator/api/: app.py  dependencies.py  schemas.py
services/orchestrator/tools/: rag_client.py
services/shared/: auth_session.py  logging.py
services/shared/auth/: models.py
tests/: conftest.py
tests/api_gateway/: test_api.py
tests/orchestrator/: test_api.py  test_rag_client.py
